# not4fun

./: .env  Cargo.toml  Rocket.toml  diesel.toml
db_mig/migrations/: posts.sql  users.sql
migrations/2025-03-15-163121_create_users/: up.sql
migrations/3025-03-15-163118_create_posts/: down.sql  up.sql
src/: diesel_mysql.rs  main.rs  schema.rs
src/diesel_mysql/: models.rs  schema.rs  schemas.rs  tests.rs
