[package]
name = "chat-b"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
mysql = "*"
diesel = { version = "2"}
diesel_migrations = "2.0.0"
password-hash = "0.5.0"
argon2 = "0.5.3"

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["diesel_mysql"]
